--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,8 @@ dependencies {
     compile group: 'info.cukes', name: 'cucumber-java', version: '1.2.5'
     testCompile group: 'info.cukes', name: 'cucumber-junit', version: '1.2.5'
     compile group: 'info.cukes', name: 'cucumber-core', version: '1.2.5'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.11.0'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+
 }
 
